fix height of search button on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -519,7 +519,6 @@ body {
         border: 1px solid #0065FC;
         border-radius: 15px;
         font-weight: 700;
-        height: 46px;
         top: 0px;
         right: -1px;
     }
